Fixing Spacing on Table

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -627,6 +627,10 @@ margin on the iframe, cause it breaks stuff. */
     margin-right: 10px;
 }
 
+.tableNameHeader {
+    white-space: nowrap;
+}
+
 .tableTitle {
     width: 5px;
     white-space: nowrap;
